# AI_factory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
cuda_workbench/: CMakeLists.txt  README.md
cuda_workbench/src/common/: check_cuda.cuh  philox.cuh  reductions.cuh
cuda_workbench/src/heston/: common.cpp  common.hpp  dynamics.cu  dynamics.cuh  european_call.cu  european_call.cuh  european_call.hpp  parameters.cpp  parameters.hpp
cuda_workbench/src/products/: european_call.cpp  european_call.hpp
cuda_workbench/tools/registry/: common.hpp  io.cpp  io.hpp  parameter_database.cpp  parameter_database.hpp  parameters.cpp  parameters.hpp  result_output.cpp  result_output.hpp  results.cpp  results.hpp
src_cpp/: CMakeLists.txt
src_cpp/ai_factory/: README.md
src_cpp/ai_factory/c_api/: c_api.cpp
src_cpp/ai_factory/common/fixed_income/: black_76.hpp  cir.hpp  cir_plus_plus.hpp  g2_plus_plus.hpp  hull_white.hpp  nelson_siegel.hpp  swaps.hpp
src_cpp/ai_factory/cpu/black_76/: caplets.cpp  caplets.hpp  swaptions.cpp  swaptions.hpp
src_cpp/ai_factory/cpu/black_scholes/: american_puts.cpp  american_puts.hpp  asian_arithmetic_calls.cpp  asian_arithmetic_calls.hpp  autocalls.cpp  autocalls.hpp  barrier_calls.hpp  common.cpp  common.hpp  digital_calls.cpp  digital_calls.hpp  down_and_in_calls.cpp  down_and_in_calls.hpp  down_and_out_calls.cpp  down_and_out_calls.hpp  european_calls.cpp  european_calls.hpp  lookback_fixed_calls.cpp  lookback_fixed_calls.hpp  up_and_in_calls.cpp  up_and_in_calls.hpp  up_and_out_calls.cpp  up_and_out_calls.hpp  volatility_swaps.cpp  volatility_swaps.hpp
src_cpp/ai_factory/cpu/cir/: bermudan_swaptions.cpp  bermudan_swaptions.hpp  caplets.cpp  caplets.hpp  interest_rate_swaps.cpp  interest_rate_swaps.hpp  swaptions.cpp  swaptions.hpp  zero_coupon_bonds.cpp  zero_coupon_bonds.hpp
src_cpp/ai_factory/cpu/cir_plus_plus/: bermudan_swaptions.cpp  bermudan_swaptions.hpp  caplets.cpp  caplets.hpp  interest_rate_swaps.cpp  interest_rate_swaps.hpp  swaptions.cpp  swaptions.hpp  zero_coupon_bonds.cpp  zero_coupon_bonds.hpp
src_cpp/ai_factory/cpu/common/: bermudan_lsm.hpp  lsm.hpp  monte_carlo.hpp  philox.cpp  philox.hpp  terminal_pricing.hpp  time_grid.hpp
src_cpp/ai_factory/cpu/g2_plus_plus/: bermudan_swaptions.cpp  bermudan_swaptions.hpp  caplets.cpp  caplets.hpp  interest_rate_swaps.cpp  interest_rate_swaps.hpp  swaptions.cpp  swaptions.hpp  zero_coupon_bonds.cpp  zero_coupon_bonds.hpp
src_cpp/ai_factory/cpu/heston/: american_puts.cpp  american_puts.hpp  asian_arithmetic_calls.cpp  asian_arithmetic_calls.hpp  autocalls.cpp  autocalls.hpp  barrier_calls.hpp  common.cpp  common.hpp  digital_calls.cpp  digital_calls.hpp  down_and_in_calls.cpp  down_and_in_calls.hpp  down_and_out_calls.cpp  down_and_out_calls.hpp  european_calls.cpp  european_calls.hpp  lookback_fixed_calls.cpp  lookback_fixed_calls.hpp  up_and_in_calls.cpp  up_and_in_calls.hpp  up_and_out_calls.cpp  up_and_out_calls.hpp  volatility_swaps.cpp  volatility_swaps.hpp
src_cpp/ai_factory/cpu/hull_white/: bermudan_swaptions.cpp  bermudan_swaptions.hpp  caplets.cpp  caplets.hpp  interest_rate_swaps.cpp  interest_rate_swaps.hpp  swaptions.cpp  swaptions.hpp  zero_coupon_bonds.cpp  zero_coupon_bonds.hpp
src_cpp/ai_factory/cpu/rough_bergomi/: asian_arithmetic_calls.cpp  asian_arithmetic_calls.hpp  autocalls.cpp  autocalls.hpp  barrier_calls.hpp  common.cpp  common.hpp  digital_calls.cpp  digital_calls.hpp  down_and_in_calls.cpp  down_and_in_calls.hpp  down_and_out_calls.cpp  down_and_out_calls.hpp  european_calls.cpp  european_calls.hpp  lookback_fixed_calls.cpp  lookback_fixed_calls.hpp  up_and_in_calls.cpp  up_and_in_calls.hpp  up_and_out_calls.cpp  up_and_out_calls.hpp  volatility_swaps.cpp  volatility_swaps.hpp
src_cpp/ai_factory/cpu/rough_heston/: american_puts.cpp  american_puts.hpp  asian_arithmetic_calls.cpp  asian_arithmetic_calls.hpp  autocalls.cpp  autocalls.hpp  barrier_calls.hpp  common.cpp  common.hpp  digital_calls.cpp  digital_calls.hpp  down_and_in_calls.cpp  down_and_in_calls.hpp  down_and_out_calls.cpp  down_and_out_calls.hpp  european_calls.cpp  european_calls.hpp  lookback_fixed_calls.cpp  lookback_fixed_calls.hpp  up_and_in_calls.cpp  up_and_in_calls.hpp  up_and_out_calls.cpp  up_and_out_calls.hpp  volatility_swaps.cpp  volatility_swaps.hpp
src_cpp/ai_factory/cuda/black_76/: api.cuh  caplets.cu  caplets.cuh  swaptions.cu
src_cpp/ai_factory/cuda/black_scholes/: american_puts.cu  api.cuh  asian_arithmetic_calls.cu  autocalls.cu  barrier_calls.cuh  digital_calls.cu  down_and_in_calls.cu  down_and_in_calls.cuh  down_and_out_calls.cu  down_and_out_calls.cuh  dynamics.cuh  european_calls.cu  lookback_fixed_calls.cu  paths.cu  up_and_in_calls.cu  up_and_in_calls.cuh  up_and_out_calls.cu  up_and_out_calls.cuh  volatility_swaps.cu
src_cpp/ai_factory/cuda/cir/: api.cuh  bermudan_swaptions.cu  bermudan_swaptions.cuh  caplets.cu  interest_rate_swaps.cu  interest_rate_swaps.cuh  swaptions.cu  zero_coupon_bonds.cu  zero_coupon_bonds.cuh
src_cpp/ai_factory/cuda/cir_plus_plus/: api.cuh  bermudan_swaptions.cu  bermudan_swaptions.cuh  caplets.cu  caplets.cuh  interest_rate_swaps.cu  interest_rate_swaps.cuh  swaptions.cu  swaptions.cuh  zero_coupon_bonds.cu  zero_coupon_bonds.cuh
src_cpp/ai_factory/cuda/common/: api.cuh  autocall.cuh  autocall_reduction.cuh  barrier_pricing.cuh  bermudan_lsm.cuh  philox.cuh  reductions.cuh  runtime.cuh  terminal_pricing.cuh  types.cuh
src_cpp/ai_factory/cuda/g2_plus_plus/: api.cuh  bermudan_swaptions.cu  bermudan_swaptions.cuh  caplets.cu  caplets.cuh  interest_rate_swaps.cu  interest_rate_swaps.cuh  swaptions.cu  swaptions.cuh  zero_coupon_bonds.cu  zero_coupon_bonds.cuh
src_cpp/ai_factory/cuda/heston/: american_puts.cu  american_puts.cuh  api.cuh  asian_arithmetic_calls.cu  autocalls.cu  barrier_calls.cuh  digital_calls.cu  down_and_in_calls.cu  down_and_in_calls.cuh  down_and_out_calls.cu  down_and_out_calls.cuh  dynamics.cuh  european_calls.cu  lookback_fixed_calls.cu  paths.cu  up_and_in_calls.cu  up_and_in_calls.cuh  up_and_out_calls.cu  (+2 more)
(+1633 files in other folders)
