[build-system]
requires = ["setuptools>=81,<82", "wheel>=0.47,<0.48"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-factory"
version = "0.1.0"
description = "A Python quantitative finance library."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.12,<3",
    "numpy>=2.4,<3",
    "scipy>=1.17,<2",
    "pyyaml>=6.0.3,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1,<10",
    "ruff>=0.13,<1",
    "mypy>=1.18,<2",
]
notebooks = [
    "jupyter>=1.1,<2",
    "matplotlib>=3.10,<4",
    "pandas>=2.3,<3",
]

[tool.setuptools.packages.find]
where = ["src_python"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src_python", "."]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src_python", "tools", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src_python"
packages = ["ai_factory"]
